@@ -1485,7 +1485,7 @@ $wgCacheEpoch = '20030516000000';
  * to ensure that client-side caches don't keep obsolete copies of global
  * styles.
  */
-$wgStyleVersion = '221';
+$wgStyleVersion = '222';
 
 
 # Server-side caching:
