@@ -181,6 +181,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 19014) If user had deletedhistory right, but not undeleted right, then 
   show "view" instead of "view/restore" on logs.
 * (bug 19017) TOC level calculation error in an odd case
+* (bug 18999) CSS update for RTL interwiki links
 
 == API changes in 1.16 ==
 
